[package]
name = "odoh-rs"
version = "1.0.2"
authors = ["Tanya Verma <tverma@cloudflare.com>"]
edition = "2021"
license = "BSD-2-Clause"
description = "Rust implementation of the Oblivious DNS over HTTPS (ODoH) protocol version 1"
repository = "https://github.com/cloudflare/odoh-rs/"
keywords = ["odoh", "protocols", "dns", "doh", "privacy"]
categories = ["network-programming", "cryptography"]
include = ["/src", "/examples", "README.md", "LICENSE"]

[dependencies]
aes-gcm = { version = "0.10.3", features = ["std"] }
bytes = "1.5.0"
hkdf = "0.12.3"
hpke = { git = "https://github.com/junkurihara/rust-hpke.git", features = [
  "std",
  "x25519",
], default-features = false }
rand = { version = "0.8.5", features = ["std_rng"], default-features = false }
thiserror = "1.0.50"

[dev-dependencies]
anyhow = "1.0.75"
base64 = "0.21.5"
clap = { version = "4.4.8", features = ["derive"] }
criterion = "0.4.0"
domain = "0.7.2"
env_logger = "0.10.1"
hex = "0.4.3"
log = "0.4.20"
rand = "0.8.5"
reqwest = "0.11.22"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }

[[bench]]
name = "odoh_bench"
path = "benches/odoh_bench.rs"
harness = false
