[package]
name = "odoh-rs"
version = "1.0.3"
authors = ["Tanya Verma <tverma@cloudflare.com>"]
edition = "2021"
license = "BSD-2-Clause"
description = "Rust implementation of the Oblivious DNS over HTTPS (ODoH) protocol version 1"
repository = "https://github.com/cloudflare/odoh-rs/"
keywords = ["odoh", "protocols", "dns", "doh", "privacy"]
categories = ["network-programming", "cryptography"]
include = ["/src", "/examples", "README.md", "LICENSE"]

[dependencies]

aes-gcm = { version = "0.10", features = ["std"] }
bytes = "1.5"
hkdf = "0.12"
hpke = { version = "0.12", features = [
  "std",
  "x25519",
], default-features = false }
rand = { version = "0.8", features = ["std_rng"], default-features = false }
thiserror = "1.0"


[dev-dependencies]
anyhow = "1.0.75"
base64 = "0.22.1"
clap = { version = "4.4.8", features = ["derive"] }
criterion = "0.5.1"
domain = "0.7.2"
env_logger = "0.11.3"
hex = "0.4.3"
log = "0.4.20"
rand = "0.8.5"
reqwest = "0.12.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }

[[bench]]
name = "odoh_bench"
path = "benches/odoh_bench.rs"
harness = false
